--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,3 @@
-@import "desktop.css";
 /* main grid is mobile because mobileFirst */
 .grid{
   display: grid;
@@ -92,24 +91,40 @@ main {
   padding: 20px;
 }
 
+.skillbox > h3{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .skillbox {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin-bottom: 10px;
-
+  padding: 10px;
+  background-color: #e5e6e4;
+  border-radius: 4.5px;
+  height: 200px;
 }
 
 .certifikat {
     margin: 15px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 300px;
+    height: 300px;
+    background: #e5e6e4;
 }
 
 
-h2 {
+.certifikat > h2 {
+  font-size: 30px;
   text-align: center;
+  padding: 0;
 }
 
 
@@ -124,6 +139,14 @@ footer{
   margin: 0;
   padding: 0;
   font-size: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+footer > p {
+  margin: inherit;
 }
 
 
@@ -165,10 +188,12 @@ header,footer{
   .skillboxy {
     min-height: 225px;
     height: auto;
+    margin: 5px;
   }
   .skillbox{
     height: 225px;
-    width: 225px;
+    width: 20vw;
+    padding: 10px;
   }
 
   nav > li,.certifikat,.skillbox{
@@ -181,6 +206,21 @@ header,footer{
   }
 }
 
+
+@media (max-width: 799px) and (min-width: 549px) {
+  .skillboxy {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .skillbox{
+    height: 225px;
+    width: 24vw;
+    padding: 10px;
+  }
+
+}
 /* dev CSS */
-.skillbox,.certifikat,.contactbox,.carousell,.mapa{border-style: dotted;}
+.certifikat,.contactbox,.carousell,.mapa{border-style: dotted;}
 .certifikaty,.contactboxy,.carousell,.mapa{min-height: 400px;}
