--- a/css/master.css
+++ b/css/master.css
@@ -143,7 +143,6 @@ h1 {
 
 .certifikat {
   margin: 15px;
-  width: 300px;
   height: 300px;
 }
 
@@ -179,6 +178,9 @@ footer > p {
     "head" /* HEADER */
     "cont" /* CONTENT */
     "foot"/* FOOTER */;
+  }
+  .certifikat {
+    width: 80vw;
   }
 }
 
@@ -229,6 +231,10 @@ footer > p {
     min-height: 225px;
     height: auto;
     margin: 5px;
+  }
+
+  .certifikat {
+    width: 25vw;
   }
 
   .skillbox{
