--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@
     .brand{
         font-size: 32.5px;
         margin: 10px;
+        padding: 0;
     }
     .navbar{
         display: flex;
@@ -75,7 +76,7 @@
     }
     /* HEADER CONTENT */
       header > h1{
-          font-size: 22.5px;
+          font-size: 27.5px;
       }
       h1 {
           padding: 0;
@@ -180,23 +181,27 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
+          align-items: center;
       }
       .contactbox{
+          order: 0;
           border-style: solid;
           border-width: 0.5px;
           border-color: #373f51;
       }
       .contactbox-img {
-          width: 275px;
+          order: 1;
+          width: 262.5px;
           height: 350px;
           border-radius: 4.5px;
           border-style: solid;
           border-width: 0.5px;
           border-color: #373f51;
-
       }
       .contactbox-img > img {
           border-radius: inherit;
+          width: inherit;
+          height: inherit;
       }
 
       .contactbox-text > p {
@@ -243,6 +248,18 @@
           width: 44vw;
       }
     /* 5th page – contactboxy */
+      .contactboxy{
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+      }
+      .contactbox{
+          order: 1;
+      }
+      .contactbox-img {
+          order: 0;
+          margin-right: 20px;
+      }
 }
 
 /* if screen exceeds 800 px (DESKTOP MODE) */
@@ -252,7 +269,7 @@
         display: grid;
         grid-gap: 0px;
         grid-template-columns: 1fr 12fr 1fr;
-        grid-template-rows: 4fr 0.5fr 3fr 0.5fr minmax(400px,auto) 0.5fr 1fr;
+        grid-template-rows: 4.5fr 0.5fr 2fr 0.5fr minmax(400px,auto) 0.5fr 1fr;
         grid-template-areas:
         "nav nav  nav"
         "... ...  ..."
@@ -324,8 +341,17 @@
     /* 5th page – contactboxy */
       .contactboxy{
           flex-direction: row;
-          justify-content: space-around;
-          align-items:center;
+          justify-content: center;
+          align-items: center;
+      }
+      .contactbox{
+          order: 1;
+
+      }
+      .contactbox-img {
+          order: 0;
+          margin-right: 20px;
+          align-items: center;
       }
   /* FOOTER */
 }
